Uses Math.clamp for progress bar value clamping.